// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Picker.Range icon 1`] = `
<div>
  <div
    class="rc-picker rc-picker-range"
  >
    <div
      class="rc-picker-input rc-picker-input-active"
    >
      <input
        autocomplete="off"
        placeholder=""
        readonly=""
        size="12"
        value="1990-09-03"
      />
    </div>
    <div
      class="rc-picker-range-separator"
    >
      ~
    </div>
    <div
      class="rc-picker-input"
    >
      <input
        autocomplete="off"
        placeholder=""
        readonly=""
        size="12"
        value="1990-09-03"
      />
    </div>
    <div
      class="rc-picker-active-bar"
      style="left: 0px; width: 0px; position: absolute;"
    />
    <span
      class="rc-picker-suffix"
    >
      <span
        class="suffix-icon"
      />
    </span>
    <span
      class="rc-picker-clear"
    >
      <span
        class="suffix-icon"
      />
    </span>
  </div>
</div>
`;

exports[`Picker.Range onPanelChange is array args should render correctly in rtl 1`] = `
<div>
  <div
    class="rc-picker rc-picker-range rc-picker-rtl"
  >
    <div
      class="rc-picker-input rc-picker-input-active"
    >
      <input
        autocomplete="off"
        placeholder=""
        readonly=""
        size="12"
        value=""
      />
    </div>
    <div
      class="rc-picker-range-separator"
    >
      ~
    </div>
    <div
      class="rc-picker-input"
    >
      <input
        autocomplete="off"
        placeholder=""
        readonly=""
        size="12"
        value=""
      />
    </div>
    <div
      class="rc-picker-active-bar"
      style="right: 0px; width: 0px; position: absolute;"
    />
  </div>
</div>
`;

exports[`Picker.Range panelRender 1`] = `
<body>
  <div>
    <div
      class="rc-picker rc-picker-range"
    >
      <div
        class="rc-picker-input rc-picker-input-active"
      >
        <input
          autocomplete="off"
          placeholder=""
          readonly=""
          size="12"
          value=""
        />
      </div>
      <div
        class="rc-picker-range-separator"
      >
        ~
      </div>
      <div
        class="rc-picker-input"
      >
        <input
          autocomplete="off"
          placeholder=""
          readonly=""
          size="12"
          value=""
        />
      </div>
      <div
        class="rc-picker-active-bar"
        style="left: 0px; width: 0px; position: absolute;"
      />
    </div>
  </div>
  <div
    style="position: absolute; top: 0px; left: 0px; width: 100%;"
  >
    <div>
      <div
        class="rc-picker-dropdown rc-picker-dropdown-range"
        style="opacity: 0;"
      >
        <div
          class="rc-picker-range-wrapper rc-picker-date-range-wrapper"
          style="min-width: 0;"
        >
          <div
            class="rc-picker-range-arrow"
            style="left: 0px;"
          />
          <div
            class="rc-picker-panel-container"
            style="margin-left: 0px;"
          >
            <h1>
              Light
            </h1>
          </div>
        </div>
      </div>
    </div>
  </div>
</body>
`;
